skrypts small upd

--- a/api_test.ipynb
+++ b/api_test.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -835,13 +835,19 @@
       "[\n",
       "    0,\n",
       "    0\n",
+      "]\n",
+      "[\n",
+      "    1,\n",
+      "    1\n",
       "]\n"
      ]
     }
    ],
    "source": [
     "source_coord = riversim.t_source_coord()\n",
-    "print(source_coord)"
+    "print(source_coord)\n",
+    "source_coord_1 = riversim.t_source_coord(1, 1)\n",
+    "print(source_coord_1)"
    ]
   },
   {
