one image of convergence generated

--- a/api_test.ipynb
+++ b/api_test.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "-1.4901161193847656e-08"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "2.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "3"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
        "True"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
        "3"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 45,
    "metadata": {
     "tags": []
    },
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 51,
    "metadata": {
     "tags": []
    },
@@ -1692,16 +1692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<riversim.t_Vector_of_TethexPoint at 0x7f4e86b75b30>"
+       "<riversim.t_Vector_of_TethexPoint at 0x7f9b8c192e50>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2350,19 +2350,19 @@
      "output_type": "stream",
      "text": [
       "[\n",
-      "    0.0958222818845765,\n",
-      "    -0.4321921627837689,\n",
-      "    -1.2277433072156942\n",
+      "    0.09582228188457634,\n",
+      "    -0.43219216278376793,\n",
+      "    -1.227743307215696\n",
       "]\n",
       "[\n",
-      "    0.09589767328542241,\n",
-      "    -0.4040761471121983,\n",
-      "    -1.0209766354302583\n",
+      "    0.09589767328542223,\n",
+      "    -0.40407614711219736,\n",
+      "    -1.0209766354302585\n",
       "]\n",
       "[\n",
-      "    0.09753568812753925,\n",
-      "    -0.28810124676944476,\n",
-      "    -0.4468282669881062\n",
+      "    0.0975356881275391,\n",
+      "    -0.28810124676944415,\n",
+      "    -0.4468282669881063\n",
       "]\n"
      ]
     }
@@ -2400,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
        "}"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2488,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
